# SCRCAD

./: README.md  app.js  package-lock.json  package.json
javascript/: app.js  color.js  cube.js  cube.json  model.js  ndarray.js  viewport-2d.js  viewport-3d.js  vue-app.js
javascript/api/: inputs.js
javascript/plugins/: components.js  import.js  inputs.js
modules/voxel-util/: README.md  package-lock.json  package.json
modules/voxel-util/lib/: index.js
modules/voxel-util/native/: Cargo.toml
modules/voxel-util/native/src/: lib.rs  meshify.rs  point.rs
plugins/scrcad-color/: index.js  package.json  plugin.json
plugins/test/: index.js  package.json  plugin.js  plugin.json
ui/: index.html
ui/style/: main.css  main.css.map  main.scss
ui/style/partials/: _dialogs.scss  _grid-layout.scss  _header.scss  _init.scss  _layers.scss  _mixins.scss  _panel-header.scss  _plugin_inputs.scss  _plugins.scss  _tool-list.scss  _toolbar.scss  _variables.scss  plugins.scss
wasm_pack/voxel-util/: package-lock.json  package.json
wasm_pack/voxel-util/lib/: index.js  worker.js
wasm_pack/voxel-util/pkg/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
wasm_pack/voxel-util/rust/: Cargo.toml
wasm_pack/voxel-util/rust/src/: cube.rs  lib.rs  meshify.rs  point.rs
