[package]
name = "voxel-util"
version = "0.1.0"
authors = ["Keve1227 <killenlillen02@gmail.com>"]
license = "UNLICENSED"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "voxel_util"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.1"

[dependencies]
neon = "0.5.1"
